[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx-cli = "0.8.6"
config = "0.15.25"

[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
"runtime-tokio",
  "tls-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]

reqwest = "0.11"
